tests/paczka1/small_fuzzy/26131952.err
Error in line 3: DoL0BFc A878 43,7
Error in line 2: MU8 A98 60,4
